feat: :rocket: firts_commit

--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,4 @@ NEXTAUTH_SECRET = 1234
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:firYaDaUQch2@localhost:5432/transbus3"
+DATABASE_URL="postgresql://motobd_user:HZrCblFZ1gGQLfaAjG4lKPgKbShDy2Oi@dpg-cqnonoij1k6c73aqihdg-a.virginia-postgres.render.com/motobd"
