feat: :rocket: Ready to work with

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ NEXTAUTH_SECRET = 1234
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://motobd_user:HZrCblFZ1gGQLfaAjG4lKPgKbShDy2Oi@dpg-cqnonoij1k6c73aqihdg-a.virginia-postgres.render.com/motobd"
+
+postgresql://postgres:firYaDaUQch2@localhost:5432/transbus3
